BlueJ_Facu/Practico3/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\javafx-base-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-base-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-controls-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-controls-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-fxml-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-fxml-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-graphics-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-graphics-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-media-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-media-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-swing-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-web-20.0.1-win.jar;C:\Program Files\BlueJ\lib\junit-4.12.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\opentest4j-1.2.0.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\javafx.web.jar;C:\Users\saula\WorkSpace\Java\BlueJ_Facu\Practico3
-d
C:\Users\saula\WorkSpace\Java\BlueJ_Facu\Practico3\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\saula\WorkSpace\Java\BlueJ_Facu\Practico3\Producto.java
<---- end of javadoc command ---->
Loading source file C:\Users\saula\WorkSpace\Java\BlueJ_Facu\Practico3\Producto.java...
Constructing Javadoc information...
C:\Users\saula\WorkSpace\Java\BlueJ_Facu\Practico3\Producto.java:10: error: cannot find symbol
    private Laboratorio laboratorio;
            ^
  symbol:   class Laboratorio
  location: class Producto
C:\Users\saula\WorkSpace\Java\BlueJ_Facu\Practico3\Producto.java:12: error: cannot find symbol
    public Producto(int p_codigo, String p_rubro, String p_desc, double p_costo, double p_porcPtoRepo, int p_existMinima, Laboratorio p_lab) {
                                                                                                                          ^
  symbol:   class Laboratorio
  location: class Producto
C:\Users\saula\WorkSpace\Java\BlueJ_Facu\Practico3\Producto.java:23: error: cannot find symbol
    public Producto(int p_codigo, String p_rubro, String p_desc, double p_costo, Laboratorio p_lab) {
                                                                                 ^
  symbol:   class Laboratorio
  location: class Producto
C:\Users\saula\WorkSpace\Java\BlueJ_Facu\Practico3\Producto.java:51: error: cannot find symbol
    private void setLaboratorio(Laboratorio p_lab) {
                                ^
  symbol:   class Laboratorio
  location: class Producto
C:\Users\saula\WorkSpace\Java\BlueJ_Facu\Practico3\Producto.java:76: error: cannot find symbol
    public Laboratorio getLaboratorio() {
           ^
  symbol:   class Laboratorio
  location: class Producto
5 errors
